--- a/app.html
+++ b/app.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- <html lang="nl" class="is-day"> -->
 <html lang="nl">
     <head>
         <meta charset="utf-8">
@@ -40,7 +39,7 @@
                 </div>
             </div>
             <p class="c-text">
-               De golven zijn <span class="js-waveheight-text">2</span> meter hoog op dit moment
+               De golven zijn <span class="c-text--hoogte js-waveheight-text">2</span> meter hoog op dit moment
             </p>
             <div class="c-horizon">
                 <div class="c-horizon__sky-wrapper">
@@ -65,9 +64,6 @@
                     </div>
                 </div>
                 <div class="c-horizon__line">
-                    <time class="c-horizon__time">
-                        07:00
-                    </time>
                 </div>
             </div>
             <p>
