--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
                 <h1 class="c-title">
                     Duik de zee in met Waves
                 </h1>
-                <div class="c-text">
-                    <p class="c-text__item">Waves is een Android app voor alle</p>
-                    <p class="c-text__item">surfers. Zie in enkele seconden of</p>
-                    <p class="c-text__item">de golven hoog genoeg zijn om er </p>
-                    <p class="c-text__item">op uit te trekken met je surfplank.</p>
+                <div class="c-text c-text__item">
+                    Waves is een android app voor alle surfers. Zie in enkele secoden of de 
+                    golven hoog genoeg zijn om er op uit te trekken met je surfplank. 
+                    Blijf op de hoogte van de app door je emailadres in te vullen.
                  </div>
                  <!-- EMAIL INPUT -->
                  <p class="c-form-field js-email-field">
